<resources>
    <string name="app_name">Rednecks in Space</string>
    <string name="button_start_game">Start New Game</string>
    <string name="farming_skill">Farmer\'s Farming Skill</string>
    <string name="farmer_creator">Farmer Creator</string>
    <string name="farmers_mineral_skill">Farmer\'s Mining Skill</string>
    <string name="farmers_brain_power">Farmer\'s Brain Power</string>
    <string name="farmer_food_req">Farmer\'s Food Requirements</string>
    <string name="farmers_pay">Farmer\'s Wages</string>
    <string name="button_create_farmer">Create Farmer</string>
    <string name="miners_creator">Miner Creator</string>
    <string name="miners_mining_skill">Miner\'s Mining Skill</string>
    <string name="miners_farming_skill">Miner\'s Farming Skill</string>
    <string name="miners_brain_skill">Miner\'s Brain Power</string>
    <string name="miners_food_req">Miner\'s Food Requirements</string>
    <string name="miners_wages">Miner\'s Wages</string>
    <string name="button_create_miner">Create Miner</string>
    <string name="banker_creator">Banker Creator</string>
    <string name="bankers_farming_skill">Banker\'s Farming Skill</string>
    <string name="bankers_mining_skill">Banker\'s Mining Skill</string>
    <string name="bankers_brain_skill">Banker\'s Brain Power</string>
    <string name="bankers_food_req">Banker\'s Food Requirements</string>
    <string name="bankers_wages">Banker\'s Wages</string>
    <string name="button_create_banker">Create Banker</string>
    <string name="slaves_creator">Slave Creator</string>
    <string name="slaves_farming_skill">Slave\'s Farming Skill</string>
    <string name="slaves_mining_skill">Slave\'s Mining Skill</string>
    <string name="slaves_brain_skill">Slave\'s Brain Power</string>
    <string name="slaves_food_req">Slave\'s Food Requirements</string>
    <string name="slaves_wages">Slave\'s Wages</string>
    <string name="button_submit_slave">Create Slave</string>
    <string name="difficulty_setup">Difficulty Setup</string>
    <string name="difficulty_easy_button">Easy</string>
    <string name="difficulty_medium_button">Medium</string>
    <string name="difficulty_hard_button">Hard</string>
    <string name="difficulty_confirm_button">Confirm</string>
    <string name="button_mainMenu_showWorkers">Show Workers</string>
    <string name="showWorkers_Farmer_head">Farmer</string>
    <string name="showWorkers_miners_head">Miner</string>
    <string name="showWorkers_banker_head">Banker</string>
    <string name="showWorkers_slave_head">Slave</string>
    <string name="showResources_head">Aviable Resources</string>
    <string name="showResources_food">Food</string>
    <string name="showResources_minerals">Minerals</string>
    <string name="showResources_money">Money</string>
    <string name="button_mainMenu_showResources">Show Resources</string>
    <string name="button_mainMenu_buildWonder">Build Wonder</string>
    <string name="button_mainMenu_buildBuilding">Build a Building</string>
    <string name="buildings_to_build">Buildings To Build</string>
    <string name="buildings_cost">Cost</string>
    <string name="buildings_upkeep">Upkeep</string>
    <string name="buildings_build_Farmhouse">Build Farmhouse</string>
    <string name="farmhouse_upkeep">1</string>
    <string name="farmhouse_cost">5</string>
    <string name="buildings_build_DeepMine">Build Deep Mine</string>
    <string name="deepMine_upkeep">1.5</string>
    <string name="deepMine_cost">8</string>
    <string name="buildings_build_Bank">Build Bank</string>
    <string name="bank_upkeep">2</string>
    <string name="bank_cost">8</string>
    <string name="building_build_wonderCrane">Build Wonder Crane</string>
    <string name="wonderCrane_cost">5</string>
    <string name="wonderCrane_upkeep">1</string>
    <string name="building_build_School">Build School</string>
    <string name="school_cost">5</string>
    <string name="school_upkeep">1.5</string>
    <string name="building_build_AlienResourcesReplicator">Build Alien Resources Replicator</string>
    <string name="resourcesReplicator_cost">5</string>
    <string name="resourcesReplicator_upkeep">2</string>
    <string name="building_build_AlienBorehole">Build Alien Borehole</string>
    <string name="alienBorehole_cost">8</string>
    <string name="alienBorehole_upkeep">2</string>
</resources>
