<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DifficultySetup">

    <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView25" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:text="@string/difficulty_setup"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" android:textSize="24sp"
            android:textAlignment="center"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView25" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/difficultySelectionButtons"
            android:checkedButton="@+id/difficultyMediumButton">
        <RadioButton
                android:text="@string/difficulty_easy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/difficultyEasyButton" android:layout_weight="1"
                android:textSize="24sp" android:textStyle="bold" android:textAllCaps="true"/>
        <RadioButton
                android:text="@string/difficulty_medium_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/difficultyMediumButton"
                android:layout_weight="1" android:textSize="24sp" android:textStyle="bold" android:textAllCaps="true"/>
        <RadioButton
                android:text="@string/difficulty_hard_button"
                android:layout_width="376dp"
                android:layout_height="wrap_content" android:id="@+id/difficultyHardButton" android:layout_weight="1"
                android:textSize="24sp" android:textStyle="bold" android:textAllCaps="true"/>
    </RadioGroup>
    <Button
            android:text="@string/difficulty_confirm_button"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:id="@+id/confirmDifficultyButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/difficultySelectionButtons" android:textSize="24sp"
            android:onClick="setDifficulty"/>
</android.support.constraint.ConstraintLayout>