<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShowResources">

    <TextView
            android:text="@string/showResources_head"
            android:layout_width="0dp"
            android:layout_height="45dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" android:id="@+id/textView30" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textSize="24sp"
            android:textAllCaps="true"/>
    <TextView
            android:text="@string/showResources_food"
            android:layout_width="230dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView39" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView30" android:textSize="24sp"/>
    <TextView
            android:text="@string/showResources_minerals"
            android:layout_width="230dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView40" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView39" android:textSize="24sp"/>
    <TextView
            android:text="@string/showResources_money"
            android:layout_width="230dp"
            android:layout_height="45dp"
            android:id="@+id/textView53"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView40"
            android:textSize="24sp"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/showFoodText" app:layout_constraintStart_toEndOf="@+id/textView39"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView30"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/showMineralsText" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/showFoodText" app:layout_constraintStart_toEndOf="@+id/textView40"
            android:layout_marginStart="24dp"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/showMoneyText" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/showMineralsText"
            app:layout_constraintStart_toEndOf="@+id/textView53"
            android:layout_marginStart="24dp"/>
</android.support.constraint.ConstraintLayout>