<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    >
    </ScrollView>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/button_mainMenu_showWorkers"
                android:layout_width="0dp"
                android:layout_height="60dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:id="@+id/showWorkers" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:textSize="24sp" android:textStyle="bold"
                android:onClick="showWorkers"/>
        <Button
                android:text="@string/button_mainMenu_showResources"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:id="@+id/showResources" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/showWorkers" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:textSize="24sp" android:textStyle="bold"
                android:onClick="showResources"/>
        <Button
                android:text="@string/button_mainMenu_buildWonder"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:id="@+id/buildWonder" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/showResources" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:textSize="24sp" android:textStyle="bold"
                android:textAlignment="center" android:onClick="buildWonder"/>
        <Button
                android:text="@string/button_mainMenu_buildBuilding"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:id="@+id/buildBuilding" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/buildWonder" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:textSize="24sp" android:textStyle="bold"
                android:textAlignment="center" android:onClick="buildBuilding"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>