<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BankerSetup">

    <Button
            android:text="@string/button_create_banker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/submitBanker"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:visibility="visible"
            android:textSize="18sp" android:onClick="createBanker"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:id="@+id/bankersWages"
            android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold" android:visibility="visible"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/bankersFoodReq"
            app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="20dp"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView12"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/bankers_wages" android:textSize="18sp" android:textAlignment="textStart"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:id="@+id/bankersFoodReq"
            android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold" android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="20dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bankersBrainSkill"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView11"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/bankers_food_req" android:textSize="18sp" android:textAlignment="textStart"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/seekBarBankerBrain"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:id="@+id/bankersBrainSkill"
            android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold" android:visibility="visible"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/seekBarBankerBrain" android:layout_marginStart="20dp"/>
    <SeekBar
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/seekBarBankerBrain" android:max="200"
            android:visibility="visible"
            android:progress="0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:layout_width="265dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView10" android:text="@string/bankers_brain_skill"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" android:textAlignment="textStart"
            android:textSize="18sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:id="@+id/bankersMiningSkill"
            android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold" android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="20dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bankersFarmingSkill"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView9"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/bankers_mining_skill" android:textSize="18sp" android:textAlignment="textStart"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:id="@+id/bankersFarmingSkill"
            android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold" android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="20dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView7"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:text="@string/bankers_farming_skill" android:textSize="18sp" android:textAlignment="textStart"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:text="@string/banker_creator"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" android:textSize="24sp"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>